# wealthy-corgi

./: .gitignore  README.md  config.py  pyproject.toml
code/: analyze_dividend.py  analyze_stocks.py  build_books.py  config.py
utils/: __init__.py  alpha_vanatage.py  alpha_vantage.py  budongsan_bank.py  gold_price_z.py  naver_finance.py  spreadsheet.py  yahoo_finance.py
